@@ -21,6 +21,7 @@ $VERSION = '0.74';
 @ISA = qw/Graph::Easy::Base/;
 
 use strict;
+use warnings;
 my $att_aliases;
 
 use Graph::Easy::Util qw(ord_values);
