@@ -13,6 +13,7 @@ $VERSION = '0.74';
 package Graph::Easy;
 
 use strict;
+use warnings;
 
 my $vcg_remap = {
   node => {
