@@ -6,6 +6,7 @@
 package Graph::Easy::Group::Anon;
 
 use Graph::Easy::Group;
+use warnings;
 
 @ISA = qw/Graph::Easy::Group/;
 $VERSION = '0.74';
