@@ -11,6 +11,7 @@ use Graph::Easy::Node;
 $VERSION = '0.74';
 
 use strict;
+use warnings;
 
 BEGIN
   {
