@@ -4,6 +4,7 @@ Revision history for Graph::Easy (formerly known as Graph::Simple):
   * Remove leftover files from the MANIFEST (CPANTS error).
   * All the versions of the .pm files are now consistent (CPANTS error).
     - Add scripts/bump-version-number.pl to facilitate that.
+  * Add "use warnings;" to all modules (CPANTS error).
 
 2013-05-25 v0.73 Shlomi Fish 2938 tests
   * Got the tests to pass on perl-5.18.0 (and hopefully above).
